# esp-bare-matter

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
