[package]
name = "esp_bare_matter"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.4.0"

esp-backtrace = { version = "0.3.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.3.0", features= ["log"] }
riscv-rt = { version = "0.10", optional = true }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "4808b31", features = ["esp32c3", "embedded-svc", "wifi"] }
smoltcp = { version = "0.8.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.23.1", default-features = false}
log = "0.4.17"

bare-matter = { git = "https://github.com/bjoernQ/bare-matter", rev = "6a93d98" }
getrandom = { version = "0.2.8", features = ["custom"] }
hex-literal = "0.3"
heapless = "0.7.16"
rand_core = { version = "0.6.4", default-features = false }
critical-section = "1.1.1"

[features]
default = ["rt"]
rt = ["riscv-rt"]
